# claude-sandbox-template

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/config/: project.md
.claude/hooks/: README.md  branch-guard.sh
.claude/rules/: anti-bias.md  code-language.md  conventional-commits.md  git-workflow.md  graphify-usage.md  mcp-policy.md  no-placeholders.md  persona-quality.md  release-quality.md  secrets-guardrails.md  skill-ecosystem.md  skill-quality.md  worktree-policy.md  writing-style.md
.claude/skills/break-glass/: SKILL.md
.claude/skills/debugging/: SKILL.md
.claude/skills/docker/: SKILL.md
.claude/skills/excalidraw/: SKILL.md
.claude/skills/gh-pm/: SKILL.md
.claude/skills/html-presentation/: SKILL.md
.claude/skills/local-pr/: SKILL.md
.claude/skills/looping/: SKILL.md
.claude/skills/new-spike/: SKILL.md
.claude/skills/notebook/: SKILL.md
.claude/skills/onboarding/: SKILL.md
.claude/skills/powershell/: SKILL.md
.claude/skills/promptify/: SKILL.md
.claude/skills/python/: SKILL.md
.claude/skills/recommend/: SKILL.md
.claude/skills/release-tag/: SKILL.md
.githooks/: pre-commit
docs/: README.md
docs/.obsidian/: app.json  core-plugins.json
docs/01_adr/: _adr_template.md
setup/blueprints/: _gene_template.md  agentic_project_structure.md  feature_branch_git_workflow.md
setup/executions/: hello_world.py  smoke_test.sh
setup/genes/: README.md
setup/plugins/: plugin_setup.md  stack.csv
setup/workflows/: _INDEX.md
(+9 files in other folders)
